--- a/react-app/src/components/NavBar/NavBar.css
+++ b/react-app/src/components/NavBar/NavBar.css
@@ -2,7 +2,16 @@
   box-sizing: border-box;
 }
 
+body {
+  margin: 0;
+}
+
 ul {
   display: flex;
   justify-content: flex-end;
+  background: white;
+  width: 100%;
+  height: 50px;
+  margin: 0;
+
 }
