--- a/react-app/src/components/ProfilePage/ProfilePage.css
+++ b/react-app/src/components/ProfilePage/ProfilePage.css
@@ -6,9 +6,6 @@
     /* grid-template-columns: 4fr 10fr;
     grid-template-rows: auto; */
     grid-template-areas: "side head head head"
-                         "side head head head"
-                         "side body body body"
-                         "side body body body"
                          "side body body body";
 }
 
@@ -24,8 +21,8 @@
 
 .page-container__side {
     grid-area: side;
-    background-color: rgba(117, 190, 218, 1)
-    /* height: 100vh; */
+    background-color: rgba(117, 190, 218, 1);
+    /* width: 80%; */
 }
 
 .page-container__body {
@@ -60,10 +57,12 @@
 }
 
 .quiz-block {
-    justify-content: space-around;
+    justify-content: space-between;
     align-items: center;
     border-bottom: solid grey 1px;
     width: 100%;
     height: 80px;
+    padding-left: 10px;
+    padding-right: 15px;
     display: flex;
 }
