--- a/react-app/src/components/ProfilePage/ProfilePage.css
+++ b/react-app/src/components/ProfilePage/ProfilePage.css
@@ -19,7 +19,8 @@ body {
 
 .page-container__top {
     grid-area: head;
-    height: 100px;
+    height: 165px;
+    background-image: url("./banner.png");
 }
 
 .page-container__side {
@@ -71,6 +72,13 @@ body {
 }
 
 h1.sidebar {
+    color: white;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+h1.top {
     color: white;
     display: flex;
     flex-direction: column;
