--- a/react-app/src/components/ProfilePage/ProfilePage.css
+++ b/react-app/src/components/ProfilePage/ProfilePage.css
@@ -9,6 +9,7 @@ body {
     /* border: solid black 2px; */
     /* grid-template-columns: 4fr 10fr;
     grid-template-rows: auto; */
+    /* grid-template-rows: 1fr, 4fr; */
     grid-template-areas: "side head head head"
                          "side body body body";
 }
