--- a/react-app/src/components/QuizPage/QuizPage.css
+++ b/react-app/src/components/QuizPage/QuizPage.css
@@ -74,3 +74,33 @@
     height: 150px;
     width: 200px;
 }
+
+.score-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin: 30px;
+    padding: 10px, 10px
+}
+
+.score-meter-outter {
+    border: 1px solid black;
+    width: 50px;
+    height: 200px;
+    position: relative;
+}
+
+.score-meter {
+    background-color: yellow;
+    width: 48px;
+    position: absolute;
+    bottom: 0;
+}
+
+.score-meter.full {
+    background-color: green;
+}
+
+.score-meter.low {
+    background-color: red;
+}
