--- a/react-app/src/components/ProfilePage/ProfilePage.css
+++ b/react-app/src/components/ProfilePage/ProfilePage.css
@@ -73,6 +73,14 @@ body {
     display: flex;
 }
 
+.quiz-block div:first-child {
+    margin-right: auto;
+}
+
+.quiz-block div:last-child {
+    margin-left: 20px;
+}
+
 h1.sidebar {
     color: white;
     display: flex;
