--- a/react-app/src/components/ProfilePage/ProfilePage.css
+++ b/react-app/src/components/ProfilePage/ProfilePage.css
@@ -88,6 +88,12 @@ h1.sidebar {
     display: flex;
     flex-direction: column;
     align-items: center;
+    text-shadow:
+        -1px -1px 0 rgba(255,255,255,.5),
+        1px 1px 0 rgba(0,0,0,.25),
+        3px 3px 3px rgba(0,0,0,.25),
+        10px 10px 20px rgba(0,0,0,.5),
+        20px 40px 40px rgba(0,0,0,.5); 
 }
 
 h1.top {
