please add avatars and portfolio links

--- a/react-app/src/components/Footer/Footer.css
+++ b/react-app/src/components/Footer/Footer.css
@@ -31,10 +31,10 @@
   align-items: center;
 }
 
-.footer-links:hover {
-  color: rgba(120, 165, 224, 0.7);
-}
-
 .footer-links span {
   margin-left: 4px;
+}
+
+.footer-icon {
+  color: rgba(29, 26, 206, 0.7);
 }
